l2vni incremental update

--- a/dag/playbook_overlay_incremental_commit.yml
+++ b/dag/playbook_overlay_incremental_commit.yml
@@ -29,9 +29,16 @@
       '../templates/bgp_l2vpn_evpn_af.j2': 'bgp l2vpn evpn af block'
 
   tasks:
-          - name: Load variables from files under host_vars/inc_vars folder
-            when: inventory_hostname in groups['leaf']
-            include_vars: host_vars/inc_vars/{{inventory_hostname}}.yml
+          - name: Check whether host_vars/inc_vars/{{ inventory_hostname }}.yml is present
+            local_action: stat path=./host_vars/inc_vars/{{ inventory_hostname }}.yml
+            register: file_state
+            become: no 
+            
+          - name: Executing tasks if host_vars/inc_vars/{{ inventory_hostname }}.yml is present
+            when: file_state.stat.exists and inventory_hostname in groups['leaf']
+            block:
+            - name: Load variables from files under host_vars/inc_vars folder
+              include_vars: host_vars/inc_vars/{{ inventory_hostname }}.yml
 
           - name: Check if full execution is needed
             set_fact: 
@@ -39,7 +46,7 @@
             when: (vrf_cli is defined) or (vlan_cli is defined) or (svi_cli is defined) or (ovrl_intf_cli is defined)
 
           - name: VRF configuration
-            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and vrf_cli is defined) or (incremental_run == false))
+            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and vrf_cli is defined))
             cli_config:
               config: " {{ lookup('template', item.key) }} "
               diff_match: none 
@@ -47,7 +54,7 @@
             with_dict: "{{ vrf_dict }}"
             
           - name: VLAN configuration
-            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and vlan_cli is defined) or (incremental_run == false)) 
+            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and vlan_cli is defined)) 
             cli_config:
               config: " {{ lookup('template', item.key) }} "
               diff_match: none 
@@ -55,7 +62,7 @@
             with_dict: "{{ vlan_dict }}"
 
           - name: SVI configuration
-            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and svi_cli is defined) or (incremental_run == false)) 
+            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and svi_cli is defined)) 
             cli_config:
               config: " {{ lookup('template', item.key) }} "
               diff_match: none 
@@ -63,7 +70,7 @@
             with_dict: "{{ svi_dict }}"
 
           - name: Overlay interface configuration
-            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and ovrl_intf_cli is defined) or (incremental_run == false)) 
+            when: (inventory_hostname in groups['leaf']) and ((incremental_run == true and ovrl_intf_cli is defined)) 
             cli_config:
               config: " {{ lookup('template', item.key) }} "
               diff_match: none 
