--- a/dag/playbook_overlay_delete_commit.yml
+++ b/dag/playbook_overlay_delete_commit.yml
@@ -51,3 +51,8 @@
                 config: "{{ lookup('template', '../templates/access_interfaces.j2' ) }}"
                 diff_match: none
               register: result
+
+            - name: Pause for 30 seconds for convergence  
+              wait_for:
+                delay: 30
+                timeout: 0
