--- a/dag/host_vars/node_vars/Leaf-02.yml
+++ b/dag/host_vars/node_vars/Leaf-02.yml
@@ -35,8 +35,15 @@ interfaces:
     loopback: 'no'
     pim_enable: 'yes' 
 
-ospf:
-  router_id: '172.16.255.4'
+# ospf:
+#   router_id: '172.16.255.4'
+
+isis:
+  process_id: 'UNDERLAY' 
+  net: 49.0001.1720.1625.5004.00
+  passive_interfaces:
+    - Loopback0
+    - Loopback1 
 
 pim:
   rp_address: '172.16.255.255'
