--- a/dag/playbook_overlay_delete_commit.yml
+++ b/dag/playbook_overlay_delete_commit.yml
@@ -1,62 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: leaf
-  gather_facts: no
-  vars:
-    overlay_dict:
-      '../templates/svi_create.j2': 'svi block'
-      '../templates/nve_create.j2': 'nve block'
-      '../templates/vlan_create.j2': 'vlan block' 
-      '../templates/l2vpn_evpn_evi_create.j2': 'l2vpn evpn evi block'
-      '../templates/vrf_definition.j2': 'vrf block'
-      '../templates/access_interfaces.j2': 'access interfaces block'
-      '../templates/overlay_interfaces.j2': 'overlay interfaces block'
-
-  tasks:
-
-          - name: Load variables from group_vars/delete_vars.yml
-            run_once: true
-            include_vars:
-              file: group_vars/delete_vars.yml
-              name: to_del
-
-          - name: Run and parse "show run nve"
-            ansible.utils.cli_parse:
-              command: "show run nve"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: nve_output
-
-          - name: Run and parse "show run | section ^interface"
-            ansible.utils.cli_parse:
-              command: "show run | section ^interface"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: interface_output
-
-          - name: Process overlay data
-            overlay_delete_preprocess:
-              device_vars: "{{ {'run_nve': nve_output, 'intf_sec': interface_output | default([])} }}"
-              to_del: "{{ to_del }}"
-            register: module_output
-
-          - name: Include vars and read templates
-            when: module_output != {}
-            block:
-            - name: Include variables
-              set_fact:
-                "{{ item.key }}": "{{ item.value }}"
-              with_dict: "{{ module_output }}"
-
-            - name: Configure overlay
-              cli_config:
-                config: "{{ lookup('template', item.key) }}"
-                diff_match: none
-              register: result
-              with_dict: "{{ overlay_dict }}"
-
-            - name: Pause for 30 seconds for convergence  
-              wait_for:
-                delay: 30
-                timeout: 0
+../playbook/playbook_overlay_delete_commit.yml
