--- a/l3vni/playbook_overlay_delete_preview.yml
+++ b/l3vni/playbook_overlay_delete_preview.yml
@@ -1,61 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: leaf
-  gather_facts: no
-  vars:
-    overlay_block: ''
-    overlay_dict:
-      '../templates/svi_create.j2': 'svi block'
-      '../templates/nve_create.j2': 'nve block'
-      '../templates/vlan_create.j2': 'vlan block' 
-      '../templates/l2vpn_evpn_evi_create.j2': 'l2vpn evpn evi block'
-      '../templates/vrf_definition.j2': 'vrf block'
-      #'../templates/access_interfaces.j2': 'access interfaces block'
-      '../templates/overlay_interfaces.j2': 'overlay interfaces block'
-
-  tasks:
-
-          - name: Load variables from group_vars/delete_vars.yml
-            run_once: true
-            include_vars:
-              file: group_vars/delete_vars.yml
-              name: to_del
-
-          - name: Run and parse "show run nve"
-            ansible.utils.cli_parse:
-              command: "show run nve"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: nve_output
-
-          - name: Run and parse "show run | section ^interface"
-            ansible.utils.cli_parse:
-              command: "show run | section ^interface"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: interface_output
-
-          - name: Process overlay data
-            overlay_delete_preprocess:
-              device_vars: "{{ {'run_nve': nve_output, 'intf_sec': interface_output | default([])} }}"
-              to_del: "{{ to_del }}"
-            register: module_output
-
-          - name: Include vars and read templates
-            when: module_output != {}
-            block:
-            - name: Include variables
-              set_fact:
-                "{{ item.key }}": "{{ item.value }}"
-              with_dict: "{{ module_output }}"
-
-            - name: Read template files
-              set_fact:
-                overlay_block: "{{ overlay_block }} ! {{ item.value }} {{ lookup('template', item.key) }}"
-              with_dict: "{{ overlay_dict }}"
-
-          - name: Copy configurations to the respective file (<hostname>-delete.txt) under 'preview_files' folder
-            copy:
-              dest: preview_files/{{inventory_hostname}}-delete.txt
-              content: "{{ overlay_block | regex_replace('#jinja2: lstrip_blocks: \"True\", trim_blocks: \"True\"', '') | regex_replace('\\n(\\s+)','\n') | regex_replace('! ','\n! ') }}"
+../playbook/playbook_overlay_delete_preview.yml
