--- a/l2vni/playbook_overlay_commit.yml
+++ b/l2vni/playbook_overlay_commit.yml
@@ -1,46 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: all
-  gather_facts: no
-  vars:
-    leaf_ol_dict:
-      #'../templates/vrf_definition.j2': 'vrf definition block'
-      #'../templates/bgp_l2vpn_ipv46_per_vrf.j2': 'bgp per vrf block'
-      '../templates/vlan_create.j2': 'vlan block'
-      #'../templates/svi_create.j2': 'svi block'
-      '../templates/l2vpn_evpn_global.j2': 'l2vpn evpn global block'
-      '../templates/l2vpn_evpn_evi_create.j2': 'l2vpn evpn evi block'
-      '../templates/evi_vni_vlan_stiching.j2': 'evi vni vlan stiching block'
-      #'../templates/overlay_interfaces.j2': 'overlay interface block'
-      '../templates/nve_create.j2': 'nve block'
-
-    common_ol_dict:
-      '../templates/bgp_global.j2': 'bgp global block'
-      '../templates/bgp_l2vpn_evpn_af.j2': 'bgp l2vpn evpn af block'
-
-  tasks:
-
-          - name: Load vars from group_vars/overlay_db.yml
-            run_once: true
-            include_vars: 
-              file: "./group_vars/overlay_db.yml"
-
-          - name: Load vars from host_vars/node_vars/<hostname>.yml
-            include_vars: 
-              file: "./host_vars/node_vars/{{ inventory_hostname }}.yml"
-          
-          - name: Configure overlay
-            cli_config:
-              config: "{{ lookup('template', item.key) }}"
-              diff_match: none 
-            register: result
-            with_dict: "{{ common_ol_dict }}"
-
-          - name: Configure overlay specific to leaf
-            when: inventory_hostname in (groups['leaf'] | default([]))
-            cli_config:
-              config: "{{ lookup('template', item.key) }}"
-              diff_match: none 
-            register: result
-            with_dict: "{{ leaf_ol_dict }}"
+../playbook/playbook_overlay_commit.yml
