--- a/l2vni/playbook_overlay_preview.yml
+++ b/l2vni/playbook_overlay_preview.yml
@@ -1,56 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: all
-  gather_facts: no
-  vars: 
-    overlay_block: ""
-    leaf_ol_dict:
-      #'../templates/vrf_definition.j2': 'vrf definition block'
-      #'../templates/bgp_l2vpn_ipv46_per_vrf.j2': 'bgp per vrf block'
-      '../templates/vlan_create.j2': 'vlan block'
-      #'../templates/svi_create.j2': 'svi block'
-      '../templates/l2vpn_evpn_global.j2': 'l2vpn evpn global block'
-      '../templates/l2vpn_evpn_evi_create.j2': 'l2vpn evpn evi block'
-      '../templates/evi_vni_vlan_stiching.j2': 'evi vni vlan stiching block'
-      #'../templates/overlay_interfaces.j2': 'overlay interface block'
-      '../templates/nve_create.j2': 'nve block'
-
-    common_ol_dict:
-      '../templates/bgp_global.j2': 'bgp global block'
-      '../templates/bgp_l2vpn_evpn_af.j2': 'bgp l2vpn evpn af block'
-
-  tasks:
-
-          - name: Load vars from group_vars/overlay_db.yml
-            run_once: true
-            include_vars: 
-              file: "./group_vars/overlay_db.yml"
-
-          - name: Load vars from host_vars/node_vars/<hostname>.yml
-            include_vars: 
-              file: "./host_vars/node_vars/{{ inventory_hostname }}.yml"
-
-          - name: Read overlay template files
-            set_fact:
-              overlay_block: "{{ overlay_block }} ! {{ item.value }} {{ lookup('template', item.key) }}"
-            with_dict: "{{ common_ol_dict }}"
-
-          - name: Read overlay template files specific to leaf
-            when: inventory_hostname in (groups['leaf'] | default([]))
-            set_fact:
-              overlay_block: "{{ overlay_block }} ! {{ item.value }} {{ lookup('template', item.key) }}"
-            with_dict: "{{ leaf_ol_dict }}"
-
-          - name: Copy configurations to respective file ( <hostname>-overlay.txt ) under 'preview_files' folder
-            copy:
-              dest: preview_files/{{inventory_hostname}}-overlay.txt
-              content: "{{ overlay_block | regex_replace('#jinja2: lstrip_blocks: \"True\", trim_blocks: \"True\"', '') | regex_replace('\\n(\\s+)','\n') | regex_replace('! ','\n\n! ') }}"
-
-- name: Display preview file info
-  hosts: localhost
-  gather_facts: no
-
-  tasks:
-          - debug:
-              msg: Please refer to <hostname>-overlay.txt in 'preview_files' folder
+../playbook/playbook_overlay_preview.yml
