--- a/l2vni/playbook_underlay_commit.yml
+++ b/l2vni/playbook_underlay_commit.yml
@@ -1,39 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: all
-  gather_facts: no
-  connection: network_cli
-  vars:
-    underlay_dict:
-      '../templates/hostname.j2': 'hostname block'
-      '../templates/global_routing.j2': 'global routing block'
-      '../templates/underlay_interfaces.j2': 'underlay interface block'
-      '../templates/ospf_interfaces.j2': 'OSPF interface block'
-      '../templates/pim_interfaces.j2': 'PIM interface block'
-      '../templates/pim_rp.j2': 'PIM RP block'
-      '../templates/isis_underlay.j2': 'ISIS underlay block'
-
-    underlay_spine_dict:
-      '../templates/msdp_peering.j2': 'MSDP peering block'
-
-  tasks:  
-
-          - name: Load vars from host_vars/node_vars/<hostname>.yml
-            include_vars: 
-              file: "./host_vars/node_vars/{{ inventory_hostname }}.yml"
-
-          - name: Configure underlay
-            cli_config:
-              config: "{{ lookup('template', item.key) }}"
-              diff_match: none 
-            register: result
-            with_dict: "{{ underlay_dict }}"
-          
-          - name: Configure underlay specific to spine
-            when: inventory_hostname in (groups['spine'] | default([]))
-            cli_config:
-              config: "{{ lookup('template', item.key) }}"
-              diff_match: none 
-            register: result
-            with_dict: "{{ underlay_spine_dict }}"
+../playbook/playbook_underlay_commit.yml
