--- a/l3vni/playbook_overlay_incremental_commit.yml
+++ b/l3vni/playbook_overlay_incremental_commit.yml
@@ -1,85 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: leaf
-  gather_facts: no
-
-  vars:
-    inc_dict:
-      '../templates/vrf_definition.j2': 'vrf block'
-      '../templates/bgp_l2vpn_ipv46_per_vrf.j2': 'bgp l2vpn ipv46 per vrf block'
-      '../templates/vlan_create.j2': 'vlan block'
-      #'../templates/l2vpn_evpn_evi_create.j2': 'l2vpn evpn evi create block'
-      '../templates/evi_vni_vlan_stiching.j2': 'evi vni vlan stiching block'
-      '../templates/nve_create.j2': 'nve create block'
-      '../templates/svi_create.j2': 'svi create block'
-      '../templates/overlay_interfaces.j2': 'overlay interfaces block'
-
-  tasks:
-
-          - name: Set playbook_mode
-            run_once: true
-            set_fact:
-              playbook_mode: "-inc"
-
-          - name: Collect vars from group_vars/create_vars.yml
-            run_once: true
-            include_vars:
-              file: group_vars/create_vars.yml
-              name: create_vars
-              
-          - name: Collect vars from group_vars/overlay_db.yml
-            run_once: true
-            include_vars:
-              file: group_vars/overlay_db.yml
-              name: overlay_db_vars
-
-          - name: Include nve_interfaces and l2vpn_global vars
-            run_once: true
-            set_fact:
-              nve_interfaces: "{{ overlay_db_vars.nve_interfaces | default({}) }}"
-              l2vpn_global: "{{ overlay_db_vars.l2vpn_global | default({}) }}"
-
-          - name: Collect vars from host_vars/node_vars/<hostname>.yml
-            include_vars:
-              file: host_vars/node_vars/{{ inventory_hostname }}.yml
-              name: hostvars_data
-
-          - name: Include bgp vars
-            set_fact:
-              bgp: "{{ hostvars_data.bgp | default({}) }}"
-
-          - name: Run and parse show run nve
-            ansible.utils.cli_parse:
-              command: "show run nve"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: nve_output
-                
-          - name: Process incremental data
-            overlay_inc_preprocess:
-              userinput: "{{ create_vars }}"
-              overlay_intf: "{{ hostvars_data }}"
-              hostvars: "{{ nve_output }}"
-              tocompare: "{{ overlay_db_vars }}"
-            register: module_output
-
-          - name: Include vars and configure overlay
-            when: module_output != {}
-            block:
-            - name: Include vars from module output
-              set_fact:
-                "{{ item.key }}": "{{ item.value }}"
-              with_dict: "{{ module_output }}"
-
-            - name: Configure overlay
-              cli_config:
-                config: "{{ lookup('template', item.key) }}"
-                diff_match: none 
-              register: result
-              with_dict: "{{ inc_dict }}"
-
-            - name: Pause for 60 seconds for convergence  
-              wait_for:
-                delay: 60
-                timeout: 0
+../playbook/playbook_overlay_incremental_commit.yml
