--- a/l3vni/playbook_overlay_precheck.yml
+++ b/l3vni/playbook_overlay_precheck.yml
@@ -1,57 +1,1 @@
----
-
-- name: Check for underlay loopback ip reachability
-  hosts: leaf
-  gather_facts: no
-  connection: local
-
-  tasks:
-
-          - name: Load vars from overlay_db.yml
-            run_once: True
-            include_vars: 
-              file: "./group_vars/overlay_db.yml"
-              name: overlay_db_vars
-
-          - name: Get NVE loopback
-            run_once: True
-            set_fact:
-              nve_loopback: "{{ (overlay_db_vars.nve_interfaces | dict2items)[0].value.source_interface }}"
-            
-          - name: Run and parse "show version"
-            ansible.utils.cli_parse:
-              command: "show version"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: sh_ver_output
-
-          - name: Run and parse "show run interface <loopback>"
-            ansible.utils.cli_parse:
-              command: "show run interface {{ nve_loopback }}"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: sh_run_int_output
-
-          - name: Get the NVE loopback IP
-            set_fact: 
-              loopback_ip: "{{ sh_run_int_output['interfaces'][nve_loopback]['ipv4']['ip'] | default('') }}"
-
-          - name: Execute ping command
-            when: inventory_hostname != item
-            cli_command:
-              command: ping {{ hostvars[item]['loopback_ip'] }}
-            loop: "{{ groups['leaf'] }}"
-            register: ping_output
-
-          - name: Check the outputs
-            device_reachability: 
-              sh_ver_parsed: "{{ sh_ver_output }}"
-              overlay_db_vars: "{{ overlay_db_vars }}"
-              loopback: "{{ hostvars }}"
-              ping_output: "{{ ping_output['results'] }}"
-              host_name: "{{ inventory_hostname }}"
-            register: final_result
-
-          - name: Print precheck results
-            debug:
-              msg: "{{ final_result['checks'] }}"
+../playbook/playbook_overlay_precheck.yml
