--- a/l3vni/playbook_underlay_preview.yml
+++ b/l3vni/playbook_underlay_preview.yml
@@ -1,48 +1,1 @@
----
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: all
-  gather_facts: no
-  vars:
-    underlay_block: ""
-    underlay_dict:
-      '../templates/hostname.j2': 'hostname block'
-      '../templates/global_routing.j2': 'global routing block'
-      '../templates/underlay_interfaces.j2': 'underlay interface block'
-      '../templates/ospf_interfaces.j2': 'OSPF interface block'
-      '../templates/pim_interfaces.j2': 'PIM interface block'
-      '../templates/pim_rp.j2': 'PIM RP block'
-      '../templates/isis_underlay.j2': 'ISIS underlay block'
-
-    underlay_spine_dict:
-      '../templates/msdp_peering.j2': 'MSDP peering block'
-
-  tasks:
-
-          - name: Load vars from host_vars/node_vars/<hostname>.yml
-            include_vars: 
-              file: "./host_vars/node_vars/{{ inventory_hostname }}.yml"
-
-          - name: Read underlay template files
-            set_fact:
-              underlay_block: "{{ underlay_block }} ! {{ item.value }} {{ lookup('template', item.key ) }}"
-            with_dict: "{{ underlay_dict }}"
-
-          - name: Read underlay template files specific to spine
-            when: inventory_hostname in (groups['spine'] | default([]))
-            set_fact:
-              underlay_block: "{{ underlay_block }} ! {{ item.value }} {{ lookup('template', item.key ) }}"
-            with_dict: "{{ underlay_spine_dict }}"
-
-          - name: Copy configurations to the respective file ( <hostname>-underlay.txt ) under 'preview_files' folder
-            copy:
-              dest: preview_files/{{inventory_hostname}}-underlay.txt
-              content: "{{ underlay_block | regex_replace('#jinja2: lstrip_blocks: \"True\", trim_blocks: \"True\"', '') | regex_replace('\\n(\\s+)','\n') | regex_replace('! ','\n\n! ') }}"
-
-- name: Display preview files info
-  hosts: localhost
-  gather_facts: no
-
-  tasks:
-          - debug:
-              msg: Please refer to <hostname>-underlay.txt in 'preview_files' folder
+../playbook/playbook_underlay_preview.yml
