--- a/dag/playbook_overlay_delete_ipv6_preview.yml
+++ b/dag/playbook_overlay_delete_ipv6_preview.yml
@@ -1,22 +1,1 @@
----
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: leaf
-  gather_facts: no
-
-  tasks:
-
-          - name: Set playbook mode
-            run_once: true
-            set_fact:
-              playbook_mode: del
-
-- name: Set playbook mode
-  hosts: localhost
-  gather_facts: no
-
-  tasks:
-          - set_fact:
-              playbook_mode: del
-
-- name: Import tasks from playbook_overlay_incremental_ipv6_preview.yml
-  import_playbook: playbook_overlay_incremental_ipv6_preview.yml
+../playbook/playbook_overlay_delete_ipv6_preview.yml
