--- a/dag/playbook_overlay_incremental_ipv6_commit.yml
+++ b/dag/playbook_overlay_incremental_ipv6_commit.yml
@@ -1,64 +1,1 @@
----
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: leaf
-  gather_facts: no
-  vars:
-    playbook_mode: inc
-    ipv6_dict:
-      '../templates/ipv6_incremental.j2': 'ipv6 block'
-
-  tasks:
-
-          - name: Collect vars from group_vars/overlay_db.yml
-            run_once: true
-            include_vars:
-              file: group_vars/overlay_db.yml
-              name: overlay_db_vars
-
-          - name: Collect vars from group_vars/ipv6_create_vars.yml
-            run_once: true
-            include_vars:
-              file: group_vars/ipv6_create_vars.yml
-              name: ipv6_vars
-            
-          - name: Collect vars from host_vars/node_vars/<host>.yml
-            run_once: true
-            include_vars:
-              file: host_vars/node_vars/{{ inventory_hostname }}.yml
-              name: hostvars_data
-
-          - name: Run and parse show run nve
-            ansible.utils.cli_parse:
-              command: "show run nve"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: nve_output
-
-          - name: Process IPv6 data
-            ipv6_preprocess:
-              hostvars: "{{ nve_output }}"
-              leaf_data:  "{{ hostvars_data }}"
-              overlay_db: "{{ overlay_db_vars }}"
-              userinput: "{{ ipv6_vars }}"
-              playbook_mode: "{{ playbook_mode }}"
-            register: module_output
-
-          - name: Include vars and configure IPv6
-            when: module_output != {}
-            block:
-            - name: Include vars from module output
-              set_fact:
-                "{{ item.key }}": "{{ item.value }}"
-              with_dict: "{{ module_output }}"
-
-            - name: Configure IPv6
-              cli_config:
-                config: " {{ lookup('template', item.key) }} "
-                diff_match: none 
-              register: result
-              with_dict: "{{ ipv6_dict }}"
-            
-          - name: Pause for 20 seconds for convergence  
-            wait_for:
-              delay: 20
-              timeout: 0
+../playbook/playbook_overlay_incremental_ipv6_commit.yml
