--- a/l3vni/playbook_overlay_incremental_ipv6_preview.yml
+++ b/l3vni/playbook_overlay_incremental_ipv6_preview.yml
@@ -1,73 +1,1 @@
-
-- name: Automated VXLAN deployment with BGP EVPN L2/L3 underlay w/ Spine
-  hosts: leaf
-  gather_facts: no
-  vars:
-    playbook_mode: inc
-    ipv6_block : ''
-    ipv6_dict:
-      '../templates/ipv6_incremental.j2': 'ipv6 block'
-
-  tasks:
-
-          - name: Collect vars from group_vars/overlay_db.yml
-            run_once: true
-            include_vars:
-              file: group_vars/overlay_db.yml
-              name: overlay_db_vars
-
-          - name: Collect vars from group_vars/ipv6_create_vars.yml
-            run_once: true
-            include_vars:
-              file: group_vars/ipv6_create_vars.yml
-              name: ipv6_vars
-            
-          - name: Collect vars from host_vars/node_vars/<hostname>.yml
-            run_once: true
-            include_vars:
-              file: host_vars/node_vars/{{ inventory_hostname }}.yml
-              name: hostvars_data
-
-          - name: Run and parse show run nve
-            ansible.utils.cli_parse:
-              command: "show run nve"
-              parser:
-                name: ansible.netcommon.pyats
-              set_fact: nve_output
-
-          - name: Process IPv6 data
-            ipv6_preprocess:
-              hostvars: "{{ nve_output }}"
-              leaf_data:  "{{ hostvars_data }}"
-              overlay_db: "{{ overlay_db_vars }}"
-              userinput: "{{ ipv6_vars }}"
-              playbook_mode: "{{ playbook_mode }}"
-            register: module_output
-
-          - name: Include vars and configure IPv6
-            when: module_output != {}
-            block:
-            - name: Include vars from module output
-              set_fact:
-                "{{ item.key }}": "{{ item.value }}"
-              with_dict: "{{ module_output }}"
-            
-            - name: Read template files
-              set_fact:
-                ipv6_block: "{{ ipv6_block }} ! {{ item.value }} {{ lookup('template', item.key ) }}"
-              with_dict: "{{ ipv6_dict }}"
-
-          - name: Copy configurations to respective file (<hostname>-ipv6-{{ playbook_mode }}.txt) under 'preview_files' folder
-            copy:
-              dest: preview_files/{{ inventory_hostname }}-ipv6-{{ playbook_mode }}.txt
-              content: "{{ ipv6_block | regex_replace('#jinja2: lstrip_blocks: \"True\", trim_blocks: \"True\"', '') | regex_replace('\\n(\\s+)','\n') | regex_replace('! ','\n! ') }}"
-              
-- name: Display preview file info
-  hosts: localhost
-  gather_facts: no
-  vars:
-    playbook_mode: inc
-    
-  tasks:
-          - debug:
-              msg: Please refer to <hostname>-ipv6-{{ playbook_mode }}.txt in 'preview_files' folder
+../playbook/playbook_overlay_incremental_ipv6_preview.yml
