--- a/l2vni/playbook_yml_validation.yml
+++ b/l2vni/playbook_yml_validation.yml
@@ -1,16 +1,1 @@
----
-
-- name: Overlay "group_vars/overlay_db.yml" validation 
-  hosts: all 
-  gather_facts: no
-  tasks:  
-          - name: run the "group_vars/overlay_db.yml" validation module
-            run_once: true
-            precheck_l2vni_yml: 
-              fileName: "group_vars/overlay_db.yml"
-            register: result
-            
-          - name: Print result
-            run_once: true
-            debug:
-              msg: "Yaml file validation : {{ result}}'"
+../playbook/playbook_yml_validation.yml
